Keranjang v1 - Galuh Alifani

--- a/cart.css
+++ b/cart.css
@@ -64,3 +64,13 @@ ul {
     color: red;
     font-style: italic;
 }
+
+.alert {
+    color: darkred;
+    font-size:large;
+    font-style: italic 
+}
+
+.kembali {
+    padding-top: 10px
+}
